--- a/index.html
+++ b/index.html
@@ -1,76 +1,130 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+
+  <!-- custom font -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@400;600&display=swap" rel="stylesheet"> 
+
+  <!-- custom css stylesheet -->
+  <link rel="stylesheet" href="styles.css">
+
   <title>Frontend Mentor | [Challenge Name Here]</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
+    .attribution {
+      font-size: 11px;
+      text-align: center;
+    }
+
+    .attribution a {
+      color: hsl(228, 45%, 44%);
+    }
   </style>
 </head>
+
 <body>
-  Daniel Clifford
-  Verified Graduate
+  <main role="main">
+    <section role="region" aria-label="Testimonial of Daniel Clifford a verified graduate.">
+      <img src="images/image-daniel.jpg" alt="user image">
+      <div class="graduate" aria-hidden="true">
+        <h2 aria-label="user real name">Daniel Clifford</h2>
+        <h3 aria-label="graduation status">Verified Graduate</h3>
+      </div>
+        <p aria-label="testimonial feedback">
+        I received a job offer mid-course, and the subjects I learned were current, if not more so,
+        in the company I joined. I honestly feel I got every penny’s worth.
+      </p>
+      <p aria-label="graduate review">
+        “ I was an EMT for many years before I joined the bootcamp. I’ve been looking to make a
+        transition and have heard some people who had an amazing experience here. I signed up
+        for the free intro course and found it incredibly fun! I enrolled shortly thereafter.
+        The next 12 weeks was the best - and most grueling - time of my life. Since completing
+        the course, I’ve successfully switched careers, working as a Software Engineer at a VR startup. ”
+      </p>
+    </section>
 
-  I received a job offer mid-course, and the subjects I learned were current, if not more so, 
-  in the company I joined. I honestly feel I got every penny’s worth.
+    <section role="region" aria-label="Testimonial of Jonathan Walters a verified graduate.">
+      <img src="images/image-jonathan.jpg" alt="user image">
+      <div class="graduate" aria-hidden="true">  
+        <h2 aria-label="user real name">Jonathan Walters</h2>
+        <h3 aria-label="graduation status">Verified Graduate</h3>
+      </div>
+      <p aria-label="testimonial feedback">
+        The team was very supportive and kept me motivated
+      </p>
+      <p aria-label="graduate review">
+        “ I started as a total newbie with virtually no coding skills. I now work as a mobile engineer
+        for a big company. This was one of the best investments I’ve made in myself. ”
+      </p>
+    </section>
 
-  “ I was an EMT for many years before I joined the bootcamp. I’ve been looking to make a 
-  transition and have heard some people who had an amazing experience here. I signed up 
-  for the free intro course and found it incredibly fun! I enrolled shortly thereafter. 
-  The next 12 weeks was the best - and most grueling - time of my life. Since completing 
-  the course, I’ve successfully switched careers, working as a Software Engineer at a VR startup. ”
+    <section role="region" aria-label="Testimonial of Jeanette Harmon a verified graduate.">
+      <img src="images/image-jeanette.jpg" alt="user image">
+      <div class="graduate" aria-hidden="true">
+        <h2 aria-label="user real name">Jeanette Harmon</h2>
+        <h3 aria-label="graduation status">Verified Graduate</h3>
+      </div>
+      <p aria-label="testimonial feedback">
+        An overall wonderful and rewarding experience
+      </p>
+      <p aria-label="graduate review">
+        “ Thank you for the wonderful experience! I now have a job I really enjoy, and make a good living
+        while doing something I love. ”
+      </p>
+    </section>
 
-  Jonathan Walters
-  Verified Graduate
+    <section role="region" aria-label="Testimonial of Patrick Abrams a verified graduate.">
+      <img src="images/image-patrick.jpg" alt="user image">
+      <div class="graduate" aria-hidden="true">
+        <h2 aria-label="user real name">Patrick Abrams</h2>
+        <h3 aria-label="graduation status">Verified Graduate</h3>
+      </div>
+      <p aria-label="testimonial feedback">
+        Awesome teaching support from TAs who did the bootcamp themselves. Getting guidance from them and
+        learning from their experiences was easy.
+      </p>
+      <p aria-label="graduate review">
+        “ The staff seem genuinely concerned about my progress which I find really refreshing. The program
+        gave me the confidence necessary to be able to go out in the world and present myself as a capable
+        junior developer. The standard is above the rest. You will get the personal attention you need from
+        an incredible community of smart and amazing people. ”
+      </p>
+    </section>
 
-  The team was very supportive and kept me motivated
-
-  “ I started as a total newbie with virtually no coding skills. I now work as a mobile engineer 
-  for a big company. This was one of the best investments I’ve made in myself. ”
-
-  Jeanette Harmon
-  Verified Graduate
-
-  An overall wonderful and rewarding experience
-
-  “ Thank you for the wonderful experience! I now have a job I really enjoy, and make a good living 
-  while doing something I love. ”
-
-  Patrick Abrams
-  Verified Graduate
-
-  Awesome teaching support from TAs who did the bootcamp themselves. Getting guidance from them and 
-  learning from their experiences was easy.
-
-  “ The staff seem genuinely concerned about my progress which I find really refreshing. The program 
-  gave me the confidence necessary to be able to go out in the world and present myself as a capable 
-  junior developer. The standard is above the rest. You will get the personal attention you need from 
-  an incredible community of smart and amazing people. ”
-
-  Kira Whittle
-  Verified Graduate
-
-  Such a life-changing experience. Highly recommended!
-
-  “ Before joining the bootcamp, I’ve never written a line of code. I needed some structure from 
-  professionals who can help me learn programming step by step. I was encouraged to enroll by a former 
-  student of theirs who can only say wonderful things about the program. The entire curriculum and staff 
-  did not disappoint. They were very hands-on and I never had to wait long for assistance. The agile team 
-  project, in particular, was outstanding. It took my learning to the next level in a way that no tutorial 
-  could ever have. In fact, I’ve often referred to it during interviews as an example of my developent 
-  experience. It certainly helped me land a job as a full-stack developer after receiving multiple offers. 
-  100% recommend! ”
-  
+    <section id="last" role="region" aria-label="Testimonial of Kira Whittle a verified graduate.">
+      <img src="images/image-kira.jpg" alt="user image">
+      <div class="graduate" aria-hidden="true">
+        <h2 aria-label="user real name">Kira Whittle</h2>
+        <h3 aria-label="graduation status">Verified Graduate</h3>
+      </div>
+      <p aria-label="testimonial feedback">
+        Such a life-changing experience. Highly recommended!
+      </p>
+      <p aria-label="graduate review">
+        “ Before joining the bootcamp, I’ve never written a line of code. I needed some structure from
+        professionals who can help me learn programming step by step. I was encouraged to enroll by a former
+        student of theirs who can only say wonderful things about the program. The entire curriculum and staff
+        did not disappoint. They were very hands-on and I never had to wait long for assistance. The agile team
+        project, in particular, was outstanding. It took my learning to the next level in a way that no tutorial
+        could ever have. In fact, I’ve often referred to it during interviews as an example of my developent
+        experience. It certainly helped me land a job as a full-stack developer after receiving multiple offers.
+        100% recommend! ”
+      </p>
+    </section>
+  </main>
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">Your Name Here</a>.
   </div>
 </body>
+
 </html>
